[package]
name = "novovault"
version = "1.4.2"
edition = "2024"
description = "An encrypted store for notes"
license = "MIT"
repository = "https://github.com/DiscordJim/novault"
homepage = "https://github.com/DiscordJim/novault"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
atomicwrites = "0.4.4"
aws-sign-v4 = "0.3.0"
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colorize = "0.1.0"
crossterm = "0.29.0"
hex = "0.4.3"
ignore = "0.4.25"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.10"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
zeroize = { version = "1.8.2", features = ["derive"] }
zip = "7.0.0"
